docs/akka/1.2/_sources/project/links.txt
.. _support:

`Support <http://typesafe.com>`__
=========================================

`Typesafe <http://typesafe.com>`_

`Mailing List <http://groups.google.com/group/akka-user>`_
==========================================================

`Akka User Google Group <http://groups.google.com/group/akka-user>`_

`Akka Developer Google Group <http://groups.google.com/group/akka-dev>`_


`Downloads <https://akka.io/downloads/>`_
========================================

`<https://akka.io/downloads/>`_


`Source Code <http://github.com/akka/akka>`_
==============================================

Akka uses Git and is hosted at `Github <http://github.com>`_.

* Akka: clone the Akka repository from `<http://github.com/akka/akka>`_
* Akka Modules: clone the Akka Modules repository from `<http://github.com/akka/akka-modules>`_


`Maven Repository <https://akka.io/repository/>`_
================================================

The Akka Maven repository can be found at `<https://akka.io/repository>`_. 

Typesafe provides `<http://repo.typesafe.com/typesafe/releases/>`_ that proxies several other repositories, including akka.io.
It is convenient to use the Typesafe repository, since it includes all external dependencies of Akka. 
It is a "best-effort" service, and if it is unavailable you may need to use the underlying repositories
directly.  

* https://akka.io/repository
* http://repository.codehaus.org
* http://guiceyfruit.googlecode.com/svn/repo/releases/
* http://repository.jboss.org/nexus/content/groups/public/
* http://download.java.net/maven/2
* http://oss.sonatype.org/content/repositories/releases
* http://download.java.net/maven/glassfish
* http://databinder.net/repo   


